# routes/index.js
@@ -2,12 +2,25 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-// Hello World route
+/**
+ * @swagger
+ * /:
+ *   get:
+ *     tags: [Hello World]
+ *     summary: Returns welcome message
+ *     responses:
+ *       200:
+ *         description: A welcome message
+ *         content:
+ *           text/plain:
+ *             schema:
+ *               type: string
+ *               example: "Hello World! - The Contacts API is running"
+ */
 router.get('/', (req, res) => {
+  // Swagger-tags['Hello World']
   res.send('Hello World! - The Contacts API is running');
 });
 
-// Mount contacts router
-router.use('/contacts', require('./contacts'));
 
 module.exports = router;
