# swagger.json
@@ -32,7 +32,7 @@
     "application/json"
   ],
   "paths": {
-    "/": {
+    "/contacts": {
       "get": {
         "description": "",
         "produces": [
@@ -85,7 +85,7 @@
         }
       }
     },
-    "/{id}": {
+    "/contacts/{id}": {
       "get": {
         "description": "",
         "produces": [
